PQ-KMeans was integrated into Quantizer interface.