@@ -170,6 +170,7 @@ subprojects {
         isFailOnError = false
         options.quiet()
         (options as CoreJavadocOptions).addStringOption("Xdoclint:none", "-quiet")
+        (options as CoreJavadocOptions).addStringOption("--enable-preview")
     }
 
     dependencies {
